--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -2,6 +2,10 @@
   width: 240px;
 }
 
+.note-card-take-note {
+  width: 600px;
+}
+
 .note-card__container {
   border-radius: 2px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
