--- a/src/components/Note/Select/Select.css
+++ b/src/components/Note/Select/Select.css
@@ -1,10 +1,15 @@
+.note-card:hover > .note-card__select {
+  opacity: 1;
+}
+
 .note-card__select > svg:focus {
   outline: none;
 }
 
 .note-card__select:focus {
-  outline: none;
   border: 1px solid red;
+  opacity: 1;
+  outline: none;
 }
 
 .note-card__select svg {
@@ -29,6 +34,7 @@
   height: 24px;
   width: 24px;
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1);
+  opacity: 0;
   transform: translate(-7px, -7px);
   transition: background-color 0.218s linear, opacity 0.218s linear,
     transform 0.218s linear;
@@ -36,6 +42,7 @@
 }
 
 .note-card__select[aria-pressed="true"] {
+  opacity: 1;
   background-color: #6f6f6f;
   transform: translate(-9px, -9px);
 }
