--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -2,6 +2,16 @@
   cursor: default;
   position: relative;
   width: 240px;
+  transition: opacity 0.3s ease;
+  border-radius: 2px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  background-color: rgb(130, 177, 255);
+  transition: box-shadow 0.218s linear;
+
+  &.hide {
+    opacity: 0;
+  }
 
   &.note-card--edit-note {
     width: 600px;
@@ -12,7 +22,7 @@
 
     .note-card__toolbar {
       opacity: 1;
-
+      
       > div {
         margin: 0 8px;
       }
@@ -111,12 +121,7 @@
   }
 
   .note-card__container {
-    border-radius: 2px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-      0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     position: relative;
-    background-color: rgb(130, 177, 255);
-    transition: box-shadow 0.218s linear;
   }
 
   .note-card__title {
