Added NoteList Headers, Copied Main Layout

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,10 @@
 .left__column {
   float: left;
   height: 100vh;
-  width: 280px;
+  width: 15vw;
 }
 
 .content {
   float: left;
+  width: 75vw;
 }
