Fixed note text contents and added edit note height resize

--- a/src/components/EditPortal/EditPortal.scss
+++ b/src/components/EditPortal/EditPortal.scss
@@ -26,11 +26,15 @@
   &.position1 {
     .note-card {
       left: 645px !important;
-      top: 207.35px !important;
+      top: 80px !important;
       width: 600px;
 
       .note-card__container {
         opacity: 1 !important;
+
+        .note-card__textbox {
+          max-height: 600px;
+        }
       }
     }
   }
