Added routing functionality

--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -1,3 +1,4 @@
+//TODO: Factor out editnote/take-a-note css rules into the respective folders
 .note-card {
   cursor: default;
   position: relative;
